// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <div>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Base
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`container.jsx 1`] = `
<DocumentFragment>
  <div
    style="border-radius: 3px; height: 400px; overflow-x: hidden; overflow-y: auto;"
  >
    <div
      style="height: 1500px; padding-top: 200px; background-color: rgb(238, 238, 238); background-size: 30px 30px;"
    >
      <div>
        <div>
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            style="position: relative;"
            type="button"
          >
            <span
              class="t-button__text"
            >
              Container
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
